--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# .gitignore
+/node_modules/
+/TUNKITOS-win32-x64/
+/TERRONES-win32-x64/
+/MiAplicacion-win32-x64/
+/local-win32-x64/
