--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visor-web",
-  "version": "1.1.1",
+  "version": "1.1.7",
   "description": "Programa para abrir el POS en la web",
   "scripts": {
     "start": "electron main.js",
@@ -14,10 +14,8 @@
     "appId": "com.terronesdiaz.visorweb",
     "publish": [
       {
-        "provider": "github",
-        "repo": "visor-web",
-        "owner": "TerronesDiaz",
-        "private": false
+        "provider": "generic",
+        "url": "https://terronescolima.com/lanzamientos/"
       }
     ]
   },
@@ -27,9 +25,13 @@
     "electron-updater": "^6.1.4"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "electron-updater": "^6.1.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "puppeteer": "^21.3.4",
+    "winston": "^3.10.0"
   },
   "main": "main.js",
   "appURLs": [
