Correción del error de la carpeta '.caché' al momento de usar la librería puppeteer, además, ahora se usa sweetAlert2 y la ventana es un poco más grande

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"downloadPath":"C:\\Users\\Francisco Terrones\\Downloads"}
+{"downloadPath":"C:\\Users\\Francisco Terrones\\Desktop\\img-terronesPOS"}
