--- a/apiCajon/package.json
+++ b/apiCajon/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "node-thermal-printer": "^4.4.0"
   },
   "devDependencies": {
     "electron": "^26.2.1"
