--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visor-web",
-  "version": "1.1.13",
+  "version": "1.2.0",
   "description": "Programa para abrir el POS en la web",
   "scripts": {
     "start": "electron main.js",
@@ -20,8 +20,10 @@
     ]
   },
   "devDependencies": {
+    "@electron/rebuild": "^3.3.0",
     "electron": "^26.2.1",
     "electron-builder": "^24.6.4",
+    "electron-rebuild": "^3.2.9",
     "electron-updater": "^6.1.4"
   },
   "dependencies": {
@@ -30,8 +32,9 @@
     "cors": "^2.8.5",
     "electron-updater": "^6.1.4",
     "express": "^4.18.2",
+    "node-thermal-printer": "^4.4.0",
     "puppeteer": "^21.3.4",
-    "sweetalert2": "^11.7.29",
+    "sweetalert2": "^11.7.31",
     "winston": "^3.10.0"
   },
   "main": "main.js",
