--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visor-web",
-  "version": "1.3.4",
+  "version": "1.3.8",
   "description": "Programa para abrir el POS en la web",
   "scripts": {
     "start": "electron main.js",
@@ -26,13 +26,15 @@
       "./vistas/**/*",
       "libusb-1.0.dll",
       "package.json",
-      "package-lock.json"
+      "package-lock.json",
+      "appURLs.json"
     ],
     "asar": true,
     "asarUnpack": [
-      "python-print/**"
+      "python-print/**",
+      "appURLs.json"
     ]
-  },  
+  },
   "devDependencies": {
     "@electron/rebuild": "^3.3.0",
     "electron": "^26.2.1",
@@ -46,15 +48,11 @@
     "cors": "^2.8.5",
     "electron-updater": "^6.1.4",
     "express": "^4.18.2",
+    "jimp": "^0.3.5",
     "node-thermal-printer": "^4.4.0",
     "puppeteer": "^21.3.4",
-    "sweetalert2": "^11.7.31",
+    "sweetalert2": "^11.6.13",
     "winston": "^3.10.0"
   },
-  "main": "main.js",
-  "appURLs": [
-    "https://terronescolima.com/",
-    "https://tunkitos.terronescolima.com/",
-    "https://pruebas.terronescolima.com/"
-  ]
+  "main": "main.js"
 }
