Actualización de la versión del paquete a 1.5.6 y mejora en la impresión de tickets, incluyendo la generación de un pagaré en caso de pago a crédito.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "visor-web",
-  "version": "1.5.5",
-  "description": "Programa para abrir el POS en la web",
+  "version": "1.5.6",
+  "description": "Programa para abrir el POS en la web e imprimir tickets",
   "scripts": {
     "start": "electron main.js",
     "build": "electron-builder --dir .",
